Bug #15632 Race condition in INCL_NODEREQ and GCP_PREPARE during NR to starting node
Submitted: 9 Dec 2005 12:54 Modified: 15 Dec 2005 13:26
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1,5.0,5.1 OS:
Assigned to: Jonas Oreland Target Version:

[9 Dec 2005 12:54] Jonas Oreland
Description:
Race condition in INCL_NODEREQ and GCP_PREPARE during NR to starting node

How to repeat:
 

Suggested fix:
[9 Dec 2005 13:48] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/33184
[13 Dec 2005 14:58] Jonas Oreland
pushed into 5.0.18 (not yet in 4.1)
[14 Dec 2005 7:34] Jonas Oreland
pushed into 4.1.17
[15 Dec 2005 13:26] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 4.1.17 and 5.0.18 changelogs; closed.
[2 Mar 2007 18:55] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/21043

ChangeSet@1.2424, 2007-03-02 18:47:30+01:00, jonas@eel.(none) +1 -0
  ndb - bug#15632
    fix testNodeRestart -n Bug15632
    handle version > 5
[2 Mar 2007 19:13] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/21047

ChangeSet@1.2425, 2007-03-02 19:08:58+01:00, jonas@eel.(none) +1 -0
  ndb - bug#15632
    arg...also fix starting node...(version 6)