ndb - bug#15632   fix testNodeRestart -n Bug15632   handle version > 5

storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp:
  fix testNodeRestart -n Bug15632
  handle version > 5